// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HOC utils > Gitt at en komponent wrappes i render-to-body HOC > Når printable er false > Så rendres det en portal 1`] = `
<body>
  <div />
  <div>
    <section>
      My first section rendered to document
    </section>
  </div>
</body>
`;

exports[`HOC utils > Gitt at en komponent wrappes i render-to-body HOC > Når printable er true > Så rendres det en portal med body tag 1`] = `
<body>
  <div />
  <section>
    My second section rendered to body (printable)
  </section>
</body>
`;
